Fix reported Sonar issues